# fridge-tracker

./: CLAUDE.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e5c63cbf5e8e_feat_add_shelves_and_items_tables.py
backend/app/: categories.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: categories.py  health.py  items.py  search.py  shelves.py
backend/scripts/: export_requirements.py
backend/tests/: conftest.py  test_categories.py  test_items.py  test_search.py  test_shelves.py
docs/: API.md  ARCHITECTURE.md  BACKEND.md  CLAUDE_PROMPTS.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND.md  KNOWN_ISSUES.md  PHASE_2_DECISIONS.md  PRODUCT.md
frontend/: .env.example  .gitignore  App.tsx  app.json  package-lock.json  package.json
frontend/src/api/: categories.ts  client.ts  items.ts  shelves.ts  types.ts
frontend/src/components/: CategoryIcon.tsx  EmptyState.tsx  ErrorBanner.tsx  ExpirationBadge.tsx  ItemRow.tsx  ShelfCard.tsx
frontend/src/hooks/: useCategories.ts  useItems.ts  useShelves.ts
frontend/src/screens/: HomeScreen.tsx  ItemFormScreen.tsx  SearchScreen.tsx  ShelfFormScreen.tsx  ShelfScreen.tsx
frontend/src/utils/: colors.ts  expiration.ts  format.ts
terraform/: .gitignore  alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf
